<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="AccountBalance"
            type="com.polish.experiementrecyclerview.model.AccountBalance" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp"
                android:layout_margin="16dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/bankBalanceId"
                            android:layout_weight="0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/balance_image"
                            android:src="@drawable/ic_account_balance" />

                        <TextView
                            android:id="@+id/availableBalanceId"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/viga"
                            android:paddingLeft="4dp"
                            android:text="@string/available_balance"
                            android:textSize="@dimen/balance_heading" />

                        <TextView
                            android:id="@+id/amountId"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/viga"
                            android:textAlignment="textEnd"
                            android:textSize="@dimen/balance_heading"
                            tools:text="@string/d_amount" />


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <View
                        android:id="@+id/dividerOneId"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:orientation="horizontal"
                            android:layout_weight="1">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:contentDescription="@string/bank_logo"
                                android:src="@drawable/ic_guaranty_trust_bank_gtbank_vector_logo" />


                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="8dp"
                            android:layout_weight="2">

                            <TextView
                                android:id="@+id/accountNumberId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/account_details_text_size"
                                tools:text="@string/bank_number_ten" />

                            <TextView
                                android:id="@+id/bankNameId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                tools:text="@string/bank_name_now"
                                android:textSize="@dimen/account_details_text_size" />

                            <TextView
                                android:id="@+id/timingId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/account_details_text_size"
                                tools:text="@string/timing_now" />


                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="8dp"
                            android:layout_weight="1"
                            android:gravity="end">

                            <ImageView
                                android:id="@+id/deleteCardInfoId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/delete_image"
                                android:src="@drawable/ic_clear"

                                />

                            <TextView
                                android:id="@+id/amountInAccountId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/d_amount"

                                />


                        </androidx.appcompat.widget.LinearLayoutCompat>


                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
</layout>